--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>TinDeep</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -12,14 +14,36 @@
   <section id="title">
 
     <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <a href="#" class="navbar-brand">TinDeep</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenuToggle" aria-controls="mainMenuToggle" aria-expanded="false" aria-label="Menu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mainMenuToggle" >
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a href="#" class="nav-link">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About Us</a>
+            </li>
+          </ul>
+        </div>
 
+      </nav>
 
 
 
     <!-- Title -->
 
     <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
+      <h1>Meet new and interesting cats nearby.</h1>
       <button type="button">Download</button>
       <button type="button">Download</button>
     </div>
@@ -38,7 +62,7 @@
     <p>So easy to use, even your dog could do it.</p>
 
     <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+    <p>We have all the cats, the greatest cats.</p>
 
     <h3>Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
@@ -50,7 +74,7 @@
 
   <section id="testimonials">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+    <h2>I no longer have to sniff other cats for love. I've found the hottest Corgi on TinDog. Woof.</h2>
     <img src="images/dog-img.jpg" alt="dog-profile">
     <em>Pebbles, New York</em>
 
@@ -126,7 +150,9 @@
 
   </footer>
 
-
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 
 </html>
