--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>TinDeep</title>
+  <!--google fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
   <section id="title">
-
-    <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container-fluid">
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-md navbar-dark">
         <a href="#" class="navbar-brand">TinDeep</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenuToggle" aria-controls="mainMenuToggle" aria-expanded="false" aria-label="Menu">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="mainMenuToggle" >
+        <div class="collapse navbar-collapse" id="mainMenuToggle">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a href="#" class="nav-link">Home</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a href="#" class="nav-link">Pricing</a>
             </li>
             <li class="nav-item">
@@ -40,16 +44,20 @@
 
 
 
-    <!-- Title -->
+      <!-- Title -->
+      <div class="row">
+        <div class="col-lg-6">
+          <h1>Meet new and interesting cats nearby.</h1>
+          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+        </div>
+        <div lass="col-lg-6">
+          <img class="header-image" src="images/iphone6.png" alt="iphone-mockup">
+        </div>
+      </div>
+    </div>
 
-    <div>
-      <h1>Meet new and interesting cats nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
+
 
   </section>
 
@@ -57,15 +65,27 @@
   <!-- Features -->
 
   <section id="features">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="features-box col-lg-4 text-center">
+          <i class="fas fa-check-circle features-icon fa-4x"></i>
+          <h3 class="features-title">Easy to use.</h3>
+          <p class="features-description">So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="features-box col-lg-4 text-center">
+          <i class="fas fa-bullseye features-icon fa-4x"></i>
+          <h3 class="features-title">Elite Clientele</h3>
+          <p class="features-description">We have all the cats, the greatest cats.</p>
+        </div>
+        <div class="features-box col-lg-4 text-center">
+          <i class="fas fa-heart features-icon fa-4x"></i>
+          <h3 class="features-title">Guaranteed to work</h3>
+          <p class="features-description">Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
+    </div>
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the cats, the greatest cats.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
 
   </section>
 
@@ -146,13 +166,14 @@
 
   <footer id="footer">
 
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2020 TinDeep</p>
 
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/52e276fb65.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
